# FreeRTOS-ai-optimized-codebase

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  DEVELOPER_QUICKSTART.md  README.md
.agents/archive/docs/: FreeRTOS-PicoSDK-Integration-Research.md  Host-Side-Python-Tools.md  Individual-building-blocks-3-5.md
.agents/archive/docs/ai-optimized-codebase-architecture/002-Logging/: Logging-Architecture.md
.agents/archive/piv-loop-iterations/003-bb2-tokenized-logging/: bb2-tokenized-logging.md
.agents/archive/piv-loop-iterations/004-bb3-hil-scripts/: bb3-hil-scripts.md
.agents/archive/piv-loop-iterations/006-bb5-health-observability/: bb5-health-observability.md
.agents/reference/: rca-intellisense-errors.md
.agents/reference/piv-loop-iterations/: project-timeline.md
.agents/reference/piv-loop-iterations/001-project-foundation/: project-foundation.md
.agents/reference/piv-loop-iterations/002-core-infra-docker/: core-infra-docker.md
.agents/reference/piv-loop-iterations/005-bb4-persistence-telemetry/: bb4-persistence-telemetry.md
.agents/reference/piv-loop-iterations/007-core-hil-workflow-fixes/: core-hil-workflow-fixes.md
.agents/reference/piv-loop-iterations/008-hil-developer-experience/: hil-developer-experience.md
.agents/reference/piv-loop-iterations/009-production-build-workflow/: production-build-workflow.md
.agents/reference/piv-loop-iterations/010-production-build-hardening/: production-build-hardening.md
.agents/reference/piv-loop-iterations/011-dev-environment-cleanup/: dev-environment-cleanup.md
.agents/reference/piv-loop-iterations/012-docker-only-build-workflow/: docker-only-build-workflow.md
.github/: copilot-instructions.md
.github/additional-context/: user-story.md
.github/prompts/: README.md  planning.md
.github/prompts/ai-optimized-codebase/: compile-architecture.prompt.md  optimize-codebase.prompt.md  research-start-prompt.md
.github/prompts/architecture/: compile-architecture.prompt.md  optimize-codebase.prompt.md
.github/prompts/codebase-workflows/: build-production-uf2.prompt.md  change-board.prompt.md  output-production-version.prompt.md
.github/prompts/coding/core_piv_loop/: commit.prompt.md  execute.prompt.md  plan-feature.prompt.md  prime.prompt.md
.github/prompts/coding/git_issue_workflow/: commit.prompt.md  rca.prompt.md
.github/prompts/documentation/: compile-overview.prompt.md  condense-document.prompt.md
.github/prompts/instructions/: testing-guide-creation.md
.github/prompts/meta/: prompt-from-conversation.prompt.md  rewrite-prompt.prompt.md
.github/prompts/misc/: compile-overview.prompt.md  explain.prompt.md  general-research.prompt.md
.github/prompts/operations/: build-production-uf2.prompt.md  commit.prompt.md  init.prompt.md
.github/prompts/prompt-management/: update-prompt.prompt.md
.github/prompts/research/: informed-decision.prompt.md
.github/prompts/validation/code/: code-review-prompt.md  testing-guide-rca.prompt.md
.github/prompts/validation/system/: execution-report.md  system-review.md
.github/prompts/workflows/code-validation/: 1-code-review.prompt.md  3-validate-changes.prompt.md
.github/prompts/workflows/core-piv-loop/: 1-prime.prompt.md  2-plan-feature.prompt.md  3-execute-plan.prompt.md  4-execute-testing-guide.prompt.md
.github/prompts/workflows/issue-resolution/: 1-rca.prompt.md  2-implement-fix.prompt.md
docs/: BUILD_PRODUCTION_EXECUTION_REPORT.md  HIL_STACK_VALIDATION_REPORT.md  PRODUCTION_BUILD_ANALYSIS.md  README.md  Workflows-to-create.md  hil-tools-agent-guide-overview.md  troubleshooting.md
docs/ai-optimized-codebase-architecture/001-Testing-Validation/: Testing_Validation_Architecture.md  debugging_architecture.md
docs/ai-optimized-codebase-architecture/004-Data-Persistence-Telemetry/: Persistence-Telemetry-Architecture.md
docs/codebase-specific/: AI_CODEBASE_PATTERNS.md  README.md  troubleshooting.md
docs/workflows/: AGENT_HIL_FLASH_GUIDE.md
firmware/: CMakeLists.txt
firmware/app/: CMakeLists.txt  README.md  main.c
firmware/components/: README.md
firmware/components/health/: CMakeLists.txt  README.md
firmware/components/health/include/: crash_handler.h  watchdog_manager.h
firmware/components/health/src/: crash_handler.c  crash_handler_asm.S  crash_reporter.c  watchdog_manager.c
firmware/components/logging/: CMakeLists.txt  README.md
firmware/components/logging/include/: ai_log.h  ai_log_config.h  log_varint.h
firmware/components/logging/src/: log_core.c  log_varint.c
firmware/components/persistence/: CMakeLists.txt  README.md
firmware/components/persistence/include/: fs_config.h  fs_manager.h
firmware/components/persistence/src/: fs_manager.c  fs_port_rp2040.c
firmware/components/telemetry/: CMakeLists.txt  README.md
firmware/components/telemetry/include/: telemetry.h
firmware/components/telemetry/src/: supervisor_task.c  telemetry_driver.c
firmware/core/: CMakeLists.txt  FreeRTOSConfig.h  README.md  system_init.c  system_init.h
firmware/core/hardware/: README.md  flash_safe.c  flash_safe.h  gpio_hal.c  gpio_hal.h  watchdog_hal.c  watchdog_hal.h
firmware/core/linker/: README.md
firmware/shared/: README.md
resources/005-Health-Observability/: Health-Observability-Architecture.md
test/: README.md
test/host/: README.md
test/host/mocks/: README.md
tools/: README.md
tools/build_helpers/: CMakeLists.txt  PORTABILITY_SOLUTION.md  README.md  build_production.sh  fix_compile_commands.py
tools/build_helpers/cmake/: fix_compile_commands.cmake
tools/common/: README.md
tools/docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
tools/health/: README.md  crash_decoder.py  health_dashboard.py
tools/hil/: README.md  ahi_tool.py  crash_test.sh  flash.py  openocd_utils.py  probe_check.py  quick_test.sh  requirements.txt  reset.py  run_hw_test.py  run_pipeline.py
tools/hil/openocd/: pico-probe.cfg  rtt.cfg
tools/logging/: README.md  gen_tokens.py  log_decoder.py  requirements.txt
tools/telemetry/: README.md  config_sync.py  requirements.txt  telemetry_manager.py
(+27 files in other folders)
