# firmware/CMakeLists.txt
# AI-Optimized FreeRTOS Firmware Build Configuration
#
# This file will be expanded as components are implemented.
# Current state: Skeleton only — no build targets.
#
# Future subdirectories:
#   add_subdirectory(core)
#   add_subdirectory(components/logging)
#   add_subdirectory(components/telemetry)
#   add_subdirectory(components/health)
#   add_subdirectory(components/persistence)
#   add_subdirectory(app)

message(STATUS "Firmware CMakeLists.txt loaded — no targets defined yet.")
